[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = ""
authors = ["Takahiro Yoshinaga <t.yoshinaga0106@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.15.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
